Fix text overflow in profile-details class.
For more info:
1. Text overflow: http://bluemooncode.dyndns.org/~hapztron/TextOverflow.png
2. Fixing: http://bluemooncode.dyndns.org/~hapztron/TextFixing.png

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -775,7 +775,10 @@ body#home {
                 }
                 .profile-details {
                     margin-top: 170px;
-                    h2 { margin: 0 0 8px 0; }
+                    h2 {
+                        margin: 0 0 8px 0;
+                        word-wrap: break-word;
+                    }
                     word-wrap: break-word;
                     h4 { margin: 20px 0 0; }
                     @media (max-width: @breakDesktop) {
